--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,10 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="header"></div>
-    <div id="sidebar-nav"></div>
-    <div id="main-pane"></div>
+    <div id='root'>
+
+    </div>
+
 
   </body>
 </html>
